Fixed a bug that caused ViewBag.ViewTitle to pass incorrectly to form views.

--- a/Views/Companies/CompanyForm.cshtml
+++ b/Views/Companies/CompanyForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DevPath.ViewModels.Companies.CompanyFormViewModel
 @{
-    ViewBag.Title = @Model.ViewTitle;
+    ViewBag.ViewTitle = @Model.ViewTitle;
 }
 
 @Html.Partial("_Header")
