--- a/Views/EmploymentListings/EmploymentListingForm.cshtml
+++ b/Views/EmploymentListings/EmploymentListingForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DevPath.ViewModels.EmploymentListings.EmploymentListingFormViewModel
 @{
-    ViewBag.Title = @Model.ViewTitle;
+    ViewBag.ViewTitle = @Model.ViewTitle;
 }
 
 @Html.Partial("_Header")
