--- a/Views/Projects/ProjectForm.cshtml
+++ b/Views/Projects/ProjectForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DevPath.ViewModels.Projects.ProjectFormViewModel
 @{
-    ViewBag.Title = @Model.ViewTitle;
+    ViewBag.ViewTitle = @Model.ViewTitle;
 }
 
 @Html.Partial("_Header")
