Corrected reference to ClientCompany in EmploymentListing list

--- a/Views/EmploymentListings/List.cshtml
+++ b/Views/EmploymentListings/List.cshtml
@@ -40,7 +40,7 @@
 
                         @*COMPANY*@
                         <td class="d-none d-md-table-cell">
-                            @if (job.StaffingCompany != null)
+                            @if (job.ClientCompany != null)
                             {
                                 <p>@job.ClientCompany.Title</p>
                             }
