Corrected reference to ClientCompany in EmploymentListing list

--- a/Views/EmploymentListings/List.cshtml
+++ b/Views/EmploymentListings/List.cshtml
@@ -58,7 +58,7 @@
                         @*DESCRIPTION*@
                         <td>
                             <p class="d-md-none d-sm-block">@job.Title</p>
-                            @if (job.StaffingCompany != null)
+                            @if (job.ClientCompany != null)
                             {
                                 <p class="d-md-none d-sm-block">@job.ClientCompany.Title</p>
                             }
