--- a/Content/Site.css
+++ b/Content/Site.css
@@ -48,3 +48,11 @@ textarea {
     width: 100%;
     display: block;
 }
+
+/*Action Buttons*/
+
+.btn-action {
+    flex: 0 0 auto;
+    text-decoration: none;
+    width: 4rem;
+}
