Adjusted Skill List action button flex, conditional table headings, and tab title

--- a/Views/Shared/_Layout - Riga.cshtml
+++ b/Views/Shared/_Layout - Riga.cshtml
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://dyno.azurewebsites.net/" /> <!-- where do you want your post to link to -->
     <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
     <!-- Webpage Title -->
-    <title>@ViewBag.Title - Dyno</title>
+    <title>@ViewBag.ViewTitle - Dyno</title>
 
     <!-- Styles -->
     @Styles.Render("~/Content/css")
