--- a/Views/Skills/SkillForm.cshtml
+++ b/Views/Skills/SkillForm.cshtml
@@ -7,48 +7,72 @@
 
 <div class="ex-basic-1 bg-black pb-4">
     <div class="container">
-        <p>@Html.ActionLink("Skill List", "Index", "Skill", new { @class = "btn btn-primary" })</p>
+        <div class="mb-3">
+            <div class="btn-group" role="group" aria-label="button group">
+                @Html.ActionLink(
+               "Details",
+               "Details",
+               "Skills",
+               new { id = Model.Id },
+               new { @class = "btn btn-primary", style = "text-decoration: none;" }
+                 )
+                @Html.ActionLink(
+               "Skill List",
+               "Index",
+               "Skills",
+               new { @class = "btn btn-primary", style = "text-decoration: none;" }
+             )
+            </div>
+        </div>
         @using (Html.BeginForm("Save", "Skills"))
         {
-    <div class="row">
-        <div class="col-12 col-sm-6">
-
-            <div class="mb-3">
-                @Html.LabelFor(s => s.Title)
-                @Html.TextBoxFor(s => s.Title, new { @class = "form-control" })
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <div class="mb-3">
+                        @Html.LabelFor(s => s.Title)
+                        @Html.TextBoxFor(s => s.Title, new { @class = "form-control" })
+                    </div>
+                    <div class="mb-3">
+                        @Html.LabelFor(s => s.Icon)
+                        @Html.TextBoxFor(s => s.Icon, new { @class = "form-control" })
+                    </div>
+                    <div class="mb-3">
+                        @Html.LabelFor(s => s.Description)
+                        @Html.TextAreaFor(s => s.Description, new { rows = "5", @class = "form-control" })
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6">
+                    <div class="mb-3">
+                        @Html.LabelFor(s => s.Developer)
+                        @Html.TextBoxFor(s => s.Developer, new { @class = "form-control" })
+                    </div>
+                    <div class="mb-3">
+                        @Html.LabelFor(s => s.ReleaseDate)
+                        @Html.EditorFor(s => s.ReleaseDate, "{0:d MMM yyyy}", new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                    <div class="mb-3">
+                        @Html.LabelFor(s => s.RepositoryUrl)
+                        @Html.TextBoxFor(s => s.RepositoryUrl, new { @class = "form-control" })
+                    </div>
+                    <div class="mb-3">
+                        @Html.LabelFor(s => s.DocumentationUrl)
+                        @Html.TextBoxFor(s => s.DocumentationUrl, new { @class = "form-control" })
+                    </div>
+                </div>
             </div>
-            <div class="mb-3">
-                @Html.LabelFor(s => s.Icon)
-                @Html.TextBoxFor(s => s.Icon, new { @class = "form-control" })
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <div class="mb-3">
+                        @Html.LabelFor(p => p.SelectedProjectIds)
+                        @Html.ListBoxFor(p => p.SelectedProjectIds, Model.ProjectOptions, new { @class = "form-control" })
+                    </div>
+                </div>
             </div>
-            <div class="mb-3">
-                @Html.LabelFor(s => s.Description)
-                @Html.TextAreaFor(s => s.Description, new { rows = "5", @class = "form-control" })
-            </div>
-        </div>
-        <div class="col-12 col-sm-6">
-            <div class="mb-3">
-                @Html.LabelFor(s => s.Developer)
-                @Html.TextBoxFor(s => s.Developer, new { @class = "form-control" })
-            </div>
-            <div class="mb-3">
-                @Html.LabelFor(s => s.ReleaseDate)
-                @Html.EditorFor(s => s.ReleaseDate, "{0:d MMM yyyy}", new { htmlAttributes = new { @class = "form-control" } })
-            </div>
-            <div class="mb-3">
-                @Html.LabelFor(s => s.RepositoryUrl)
-                @Html.TextBoxFor(s => s.RepositoryUrl, new { @class = "form-control" })
-            </div>
-            <div class="mb-3">
-                @Html.LabelFor(s => s.DocumentationUrl)
-                @Html.TextBoxFor(s => s.DocumentationUrl, new { @class = "form-control" })
-            </div>
-        </div>
-    </div>
             <div class="row">
                 <div class="col">
                     @Html.HiddenFor(s => s.Id)
                     @Html.HiddenFor(s => s.DateAdded)
+                    @Html.HiddenFor(s => s.AddedBy)
                     <button type="submit" class="btn btn-primary">Save</button>
                 </div>
             </div>
