--- a/Views/Skills/SkillForm.cshtml
+++ b/Views/Skills/SkillForm.cshtml
@@ -26,11 +26,13 @@
         </div>
         @using (Html.BeginForm("Save", "Skills"))
         {
+            @Html.ValidationSummary(true, "Please fix the following errors:")
             <div class="row">
                 <div class="col-12 col-sm-6">
-                    <div class="mb-3">
+                    <div class="form-group mb-3 ">
                         @Html.LabelFor(s => s.Title)
                         @Html.TextBoxFor(s => s.Title, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(s => s.Title)
                     </div>
                     <div class="mb-3">
                         @Html.LabelFor(s => s.Icon)
@@ -48,7 +50,7 @@
                     </div>
                     <div class="mb-3">
                         @Html.LabelFor(s => s.ReleaseDate)
-                        @Html.EditorFor(s => s.ReleaseDate, "{0:d MMM yyyy}", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(s => s.ReleaseDate, "{0:d MMM yyyy}", new { htmlAttributes = new { @class = "form-control", style = "padding: 0 1rem 0 1rem; background-color: #fff;" } })
                     </div>
                     <div class="mb-3">
                         @Html.LabelFor(s => s.RepositoryUrl)
@@ -63,8 +65,9 @@
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <div class="mb-3">
-                        @Html.LabelFor(p => p.SelectedProjectIds)
-                        @Html.ListBoxFor(p => p.SelectedProjectIds, Model.ProjectOptions, new { @class = "form-control" })
+                        @Html.LabelFor(s => s.SelectedProjectIds)
+                        @Html.ListBoxFor(s => s.SelectedProjectIds, Model.ProjectOptions, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(s => s.SelectedProjectIds)
                     </div>
                 </div>
             </div>
@@ -72,10 +75,11 @@
                 <div class="col">
                     @Html.HiddenFor(s => s.Id)
                     @Html.HiddenFor(s => s.DateAdded)
-                    @Html.HiddenFor(s => s.AddedBy)
+                    @Html.HiddenFor(s => s.AddedById)
+                    @Html.HiddenFor(s => s.SelectedProjectIds)
                     <button type="submit" class="btn btn-primary">Save</button>
                 </div>
             </div>
         }
     </div>
-</div>¶
+</div>
