--- a/Views/Skills/List.cshtml
+++ b/Views/Skills/List.cshtml
@@ -149,60 +149,7 @@
                             @*ACTIONS*@
 
                             <td>
-                                <div @*class="btn-group"*@
-                                     role="group"
-                                     style="
-                                    display: flex;
-                                    /*flex-direction: row-reverse;*/
-                                    justify-content: flex-end;
-                                    align-items: center;
-                                    align-content: center;
-                                    gap: 4px;
-                                ">
-                                    @*REPO*@
-                                    @if (skill?.RepositoryUrl.IsEmpty() == false)
-                                    {<a href=@skill.RepositoryUrl
-                                        class="btn btn-primary btn-action"
-                                        data-bs-toggle="tooltip"
-                                        data-bs-placement="top"
-                                        title="Repo">
-                                            <img src="~/Content/Icons/github.svg"
-                                                 alt="github" />
-                                        </a>
-                                    }
-                                    @*DOCUMENTATION*@
-                                    @if (skill.DocumentationUrl != null)
-                                    {
-                                        <a href=@skill.DocumentationUrl
-                                           class="btn btn-primary btn-action"
-                                           data-bs-toggle="tooltip"
-                                           data-bs-placement="top"
-                                           title="Repo">
-                                            <img src="~/Content/Icons/book-solid.svg"
-                                                 alt="website"
-                                                 style="width: 16px;" />
-                                        </a>
-                                    }
-                                    @if (User.Identity.IsAuthenticated)
-                                    {
-                                        @*EDIT*@
-                                        <a href="@Url.Action("Edit", "Skills", new { id = skill.Id })"
-                                           class="btn btn-primary btn-action"
-                                           title=@($"Edit {skill.Title}")
-                                           data-bs-toggle="tooltip"
-                                           data-bs-placement="top">
-                                            <img src="~/Content/Icons/pencil-solid.svg" alt="edit" style="width: 16px;" />
-                                        </a>
-                                        @*DELETE*@
-                                        <a href="@Url.Action("Delete", "Skills", new { id = skill.Id })"
-                                           class="btn btn-danger btn-action"
-                                           title=@($"Delete {skill.Title}")
-                                           data-bs-toggle="tooltip"
-                                           data-bs-placement="top">
-                                            <img src="~/Content/Icons/trash-solid.svg" alt="delete" style="width: 16px;" />
-                                        </a>
-                                    }
-                                </div>
+                                @Html.Partial("_ActionButtons", skill)
                             </td>
                         </tr>
                     }
